--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "client": "npm run start --prefix client",
-    "server": "node server/index.js",
+    "server": "nodemon server/index.js",
     "app": "concurrently npm \"npm run server\" \"npm run client\""
   },
   "repository": {
