Set up Deploment Configuration

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "React App",
-	"name": "Create React App Sample",
+	"short_name": "MERNTech",
+	"name": "MERN Tech | Great Tech! Even Greater Prices!",
 	"icons": [
 		{
 			"src": "favicon.png",
